Added year(s) studied to the timeline -- work in progress.

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -39,14 +39,14 @@
             </div>
             {% if template == "list" %}
             <div class="form-group">
-                <label class="" for="min_yearpublished">Earliest</label>
-                <select class="custom-select" id="min_yearpublished">
+                <label class="" for="min_year">Earliest</label>
+                <select class="custom-select" id="min_year">
                     <option value="">Any</option>
                 </select>
             </div>
             <div class="form-group">
-                <label class="" for="max_yearpublished">Latest</label>
-                <select class="custom-select" id="max_yearpublished">
+                <label class="" for="max_year">Latest</label>
+                <select class="custom-select" id="max_year">
                     <option value="">Any</option>
                 </select>
             </div>
