--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -15,7 +15,8 @@
 
     <!-- CSS libraries
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" href="https://use.typekit.net/hjy6pmo.css">
+    <!-- <link rel="stylesheet" href="https://use.typekit.net/hjy6pmo.css"> -->
+    <script src="https://use.typekit.net/gnz4dab.js"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/vendor/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!-- Custom site-wide CSS
@@ -75,6 +76,7 @@
 
     <!-- JS libraries
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <script src="https://use.typekit.net/gnz4dab.js"></script>
     <script src="{% static 'autism_prevalence_map/vendor/js/jquery-3.3.1.min.js' %}"></script> 
     <script src="{% static 'autism_prevalence_map/vendor/js/underscore-min.js' %}"></script>  
     <script src="{% static 'autism_prevalence_map/vendor/js/popper.min.js' %}"></script> 
