--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -71,12 +71,15 @@
 <script>
     let min_yearpublished = "{{ min_yearpublished }}";
     let max_yearpublished = "{{ max_yearpublished }}";
+    let yearsstudied_number_min = "{{ yearsstudied_number_min }}";
+    let yearsstudied_number_max = "{{ yearsstudied_number_max }}";
     let min_samplesize = "{{ min_samplesize }}";
     let max_samplesize = "{{ max_samplesize }}";
     let min_prevalenceper10000 = "{{ min_prevalenceper10000 }}";
     let max_prevalenceper10000 = "{{ max_prevalenceper10000 }}";
     let studytype = "{{ studytype }}";
     let keyword = "{{ keyword }}";
+    let timeline_type = "{{ timeline_type }}";
     const world_atlas = "{% static 'autism_prevalence_map/vendor/data/110m.json' %}";
 </script>  
 <script src="{% static 'autism_prevalence_map/js/joint.js' %}"></script>
