Edited styling to make About progress bar functional 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/js/about.js 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -16,7 +16,7 @@
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<section class="hero-nav container">
+<section class="hero-nav container orange">
     <div class="sidebar-container container">
         <div class="row">
             <aside class="col-3 sidebar">
