some minor updates to the list view

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -39,13 +39,13 @@
             </div>
             {% if template == "list" %}
             <div class="form-group">
-                <label class="" for="min_year">Earliest</label>
+                <label class="" for="min_year" id="earliest-label"></label>
                 <select class="custom-select" id="min_year">
                     <option value="">Any</option>
                 </select>
             </div>
             <div class="form-group">
-                <label class="" for="max_year">Latest</label>
+                <label class="" for="max_year" id="latest-label"></label>
                 <select class="custom-select" id="max_year">
                     <option value="">Any</option>
                 </select>
