--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/style.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .centered-title {
-    margin-left: 22%;
+    text-align: center;
 }
 /* 
 .navbar-brand-text {
@@ -81,6 +81,20 @@ body {
 
 .navbar {
     box-shadow: 0px 1px 7px 0px rgba(0, 0, 0, 0.05);
+    flex: 1;
+}
+
+.navbar .left {
+    flex: 1;
+    justify-content: flex-start;
+}
+.navbar .middle {
+    flex: 1;
+    justify-content: center;
+}
+.navbar .right {
+    flex: 1;
+    justify-content: right;
 }
 
 .nav-tabs .nav-link {
@@ -196,3 +210,12 @@ body {
     stroke-width: 1px;
 }
 
+@media screen and (max-width: 1300px) {
+    .navbar-expand-lg .navbar-toggler {
+        display: block;
+        float: right;
+    }
+    .navbar-expand-lg .navbar-collapse {
+        display: none !important;
+    }
+}
