--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
@@ -1,26 +1,23 @@
 #map {
-    height: 70vh;
+    height: calc(100vh - 73px);
 }
 
-/* .svg-container {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    padding-bottom: 100%; aspect ratio
-    vertical-align: top;
-    overflow: hidden;
+@media (min-width: 576px) { 
+    #map {
+        height: 70vh;
+    }
 }
-.svg-content-responsive {
-    display: inline-block;
-    position: absolute;
-    top: 0;
-    left: 0;
-} */
 
 .zoom-buttons {
     position: absolute;
-    bottom: 22vh;
+    bottom: 1vh;
     right: 15px;
+}
+
+@media (min-width: 576px) { 
+    .zoom-buttons {
+        bottom: 22vh;
+    }
 }
 
 .zoom-buttons .zoom-button {
@@ -69,7 +66,15 @@
 
 .ui-brush {
     background: #4d4d4d;
-    height: 19vh;
+    height: 0vh;
+    display: none;
+}
+
+@media (min-width: 576px) { 
+    .ui-brush {
+        height: 19vh;
+        display: block;
+    }
 }
 
 .brush .extent {
@@ -98,13 +103,26 @@
 
 .timeline-wrapper {
     background-color: #4d4d4d;
-    height: 21vh;
+    height: 0vh;
+}
+
+@media (min-width: 576px) { 
+    .timeline-wrapper {
+        height: 21vh;
+    }
 }
 
 .timeline-toggle {
+    display: none;
     padding-top: 30px;
     padding-left: 30px;
     color: #fff;
+}
+
+@media (min-width: 576px) { 
+    .timeline-toggle {
+        display: block;
+    }
 }
 
 /* Switch CSS */
@@ -206,3 +224,5 @@
     stroke: #000;
     stroke-width: 1px;
 }
+
+
