--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -28,7 +28,7 @@
             –––––––––––––––––––––––––––––––––––––––––––––––––– -->    
             <div class="timeline-wrapper container-fluid">
                 <div class="row">
-                    <div id="timeline-toggle" class='timeline-toggle col-sm-3'>
+                    <div id="timeline-toggle" class='timeline-toggle col-xl-3'>
                         <h2>Timeline of studies</h2>
                         <span class="timeline-switch">
                             
@@ -51,7 +51,7 @@
                             {% endif %}
                         </span>
                     </div>
-                    <div id="timeline" class='ui-brush timeline col-sm-9'></div>
+                    <div id="timeline" class='ui-brush timeline col-xl-9'></div>
                 </div>
             </div>
             
