--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -71,7 +71,7 @@
 
 <!-- More Information Card
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<div id="more-information-card" class="more-information-card col-3">
+<div id="more-information-card" class="more-information-card col-lg-3 col-md-5 col-sm-6">
     <button type="button" class="close card-close" id="card-close" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
