Fixed some issues with .gitignore, added Screenshot for FB and Twitter, edits to settings.py and the base template 	modified:   ../.gitignore 	new file:   autism_prevalence_map/static/autism_prevalence_map/img/PrevalenceMapSG.png 	modified:   autism_prevalence_map/templates/autism_prevalence_map/base.html 	modified:   spectrum/settings.py

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -8,6 +8,12 @@
     <title>{% block title %}{% endblock %}</title>
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@spectrum">
+    <meta name="twitter:creator" content="@spectrum">
+    <meta name="twitter:title" content="Global Autism Prevalence Map">
+    <meta name="twitter:description" content="The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.">
+    <meta name="twitter:image" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
