--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -11,9 +11,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@spectrum">
     <meta name="twitter:creator" content="@spectrum">
-    <meta name="twitter:title" content="Global Autism Prevalence Map">
+    <meta name="twitter:title" content="Global Autism Prevalence Map | Spectrum">
     <meta name="twitter:description" content="The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.">
-    <meta name="twitter:image" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
+    <meta name="twitter:image" content="/static/autism_prevalence_map/img/spectrum-logo-white.png">
+    <meta property="og:title" content="Global Autism Prevalence Map | Spectrum" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://prevalence.spectrumnews.org/" />
+    <meta property="og:image" content="/static/autism_prevalence_map/img/spectrum-logo-white.png" />
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
