Changed FB image location 	modified:   autism_prevalence_map/templates/autism_prevalence_map/base.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -13,11 +13,11 @@
     <meta name="twitter:creator" content="@spectrum">
     <meta name="twitter:title" content="Global Autism Prevalence Map | Spectrum">
     <meta name="twitter:description" content="The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.">
-    <meta name="twitter:image" content="/static/autism_prevalence_map/img/spectrum-logo-white.png">
+    <meta name="twitter:image" content="https://prevalence.spectrumnews.org/static/autism_prevalence_map/img/PrevalenceMapSG.png">
     <meta property="og:title" content="Global Autism Prevalence Map | Spectrum" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://prevalence.spectrumnews.org/" />
-    <meta property="og:image" content="/static/autism_prevalence_map/img/spectrum-logo-white.png" />
+    <meta property="og:url" content="https://prevalence.spectrumnews.org/" />
+    <meta property="og:image" content="https://prevalence.spectrumnews.org/static/autism_prevalence_map/img/PrevalenceMapSG.png" />
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
