SAPM-38: Made edits to settings file to support local dev environment, edited link to favicon to correct the type 	modified:   autism_prevalence_map/templates/autism_prevalence_map/base.html 	modified:   spectrum/settings.py

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -38,7 +38,7 @@
 
     <!-- Favicon
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/img/favicon.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'autism_prevalence_map/img/favicon.png' %}">
 
     <!-- [Google Analytics/Optimize] -->
     <style>.async-hide { opacity: 0 !important} </style>
