--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
@@ -181,13 +181,13 @@
     -webkit-transition: right .1s ease-in, background-color .1s ease-in;
     -moz-transition: right .1s ease-in, background-color .1s ease-in;
     -o-transition: right .1s ease-in, background-color .1s ease-in;
-    -ms-transition: right .1s ease-in, background-color .1s ease-in; 
+    -ms-transition: right .1s ease-in, background-color .1s ease-in;
 }
 
 .timeline-switch > [type="checkbox"]:checked:focus + label:after, .timeline-switch > [type="checkbox"]:checked:focus + label + .timeline-switch-knob,
 .timeline-switch > [type="checkbox"]:not(:checked):focus + label:after,
 .timeline-switch > [type="checkbox"]:not(:checked):focus + label + .timeline-switch-knob {
-    box-shadow: 0 0 6px 0 #fff; 
+    box-shadow: 0 0 6px 0 #fff;
 }
 
 .timeline-switch > [type="checkbox"]:checked[disabled] + label, .timeline-switch > [type="checkbox"]:checked[disabled] + label:after, .timeline-switch > [type="checkbox"]:checked[disabled] + label + .timeline-switch-knob,
@@ -195,31 +195,52 @@
 .timeline-switch > [type="checkbox"]:not(:checked)[disabled] + label:after,
 .timeline-switch > [type="checkbox"]:not(:checked)[disabled] + label + .timeline-switch-knob {
     cursor: not-allowed;
-    opacity: 0.4; 
+    opacity: 0.4;
 }
 
 .timeline-switch > [type="checkbox"]:checked + label:after {
-    background-color: #34BBEC; 
+    background-color: #34BBEC;
 }
 
 .timeline-switch > [type="checkbox"]:not(:checked) + label:after {
-    background-color: #34BBEC; 
+    background-color: #34BBEC;
 }
 
 .timeline-switch > [type="checkbox"]:checked + label + .timeline-switch-knob {
     right: 6px;
-    background-color: #fff; 
+    background-color: #fff;
 }
 
 .timeline-switch > [type="checkbox"]:not(:checked) + label + .timeline-switch-knob {
     right: 30px;
-    background-color: #fff; 
+    background-color: #fff;
 }
 
 .timeline-axis {
     color: #fff;
     font-size: 14px;
-    font-family: "azo-sans-web", sans-serif;  
+    font-family: "azo-sans-web", sans-serif;
+}
+
+.timeline-toggle .key {
+    margin-top: 1em;
+    color: #333;
+    background: #fff;
+    border-radius: 5px;
+    padding: 10px 10px 5px;
+}
+h4 {
+    font-size: 1.2rem;
+}
+.dot {
+    display: inline-block;
+    height: 10px;
+    width: 10px;
+    border-radius: 5px;
+    background-color: #03C0FF;
+}
+.dot.recommended {
+    background-color: #007095;
 }
 
 .card-style {
