--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -25,13 +25,13 @@
     <div class="row">
         <div class="col no-padding-col">
             <!-- Timeline div
-            –––––––––––––––––––––––––––––––––––––––––––––––––– -->    
+            –––––––––––––––––––––––––––––––––––––––––––––––––– -->
             <div class="timeline-wrapper container-fluid">
                 <div class="row">
                     <div id="timeline-toggle" class='timeline-toggle col-xl-3'>
                         <h2>Timeline of studies</h2>
                         <span class="timeline-switch">
-                            
+
                             <input type="checkbox" id="timeline-switch" name="timeline-switch" {% if timeline_type == "studied" %}checked{% endif %}>
 
                             <label for="timeline-switch">
@@ -43,18 +43,23 @@
                             </label>
                             <span class="timeline-switch-knob"></span>
                         </span>
-                        <span>                                
+                        <span>
                             {% if timeline_type == "studied" %}
                                 <strong>Year(s) studied</strong>
                             {% else %}
                                 Year(s) studied
                             {% endif %}
                         </span>
+                        <div class="key">
+                            <h4>Key</h4>
+                            <span class="dot"></span> Studies<br />
+                            <span class="dot recommended"></span> Recommended Studies</span>
+                        </div>
                     </div>
                     <div id="timeline" class='ui-brush timeline col-xl-9'></div>
                 </div>
             </div>
-            
+
         </div>
     </div>
 </div>
