New Filters: Started work on adding filters to map and list 	modified:   autism_prevalence_map/static/autism_prevalence_map/js/joint.js 	modified:   autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html 	modified:   autism_prevalence_map/templates/autism_prevalence_map/list.html 	modified:   autism_prevalence_map/templates/autism_prevalence_map/map.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -134,6 +134,8 @@
     let max_samplesize = "{{ max_samplesize }}";
     let min_prevalenceper10000 = "{{ min_prevalenceper10000 }}";
     let max_prevalenceper10000 = "{{ max_prevalenceper10000 }}";
+    let meanincomeofparticipants = "{{ meanincomeofparticipants }}";
+    let educationlevelofparticipants = "{{ educationlevelofparticipants }}";
     let studytype = "{{ studytype }}";
     let keyword = "{{ keyword }}";
     let timeline_type = "{{ timeline_type }}";
