--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -37,6 +37,24 @@
                     <option value="high">&gt;100,000</option>
                 </select>
             </div>
+            <div class="form-group">
+                <label class="" for="meanincomeofparticipants">Income</label>
+                <select class="custom-select" id="meanincomeofparticipants">
+                    <option value="all">All</option>
+                    <option value="low">Low</option>
+                    <option value="med">Medium</option>
+                    <option value="high">High</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label class="" for="educationlevelofparticipants">Education</label>
+                <select class="custom-select" id="educationlevelofparticipants">
+                    <option value="all">All</option>
+                    <option value="low">Low</option>
+                    <option value="med">Medium</option>
+                    <option value="high">High</option>
+                </select>
+            </div>
             {% if template == "list" %}
             <div class="form-group">
                 <label class="" for="min_year" id="earliest-label"></label>
