SPEC-288: Adding income and education filters and data to map and list views 	modified:   spectrum/autism_prevalence_map/management/commands/pull_studies_from_gsheets.py 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/js/joint.js 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/js/list.js 	modified:   spectrum/autism_prevalence_map/static/autism_prevalence_map/js/map.js 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html 	modified:   spectrum/autism_prevalence_map/views.py

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -17,7 +17,7 @@
                 <label class="" for="studytype">Type of study</label>
                 <select class="custom-select" id="studytype">
                     <option value="">All</option>
-                </select> 
+                </select>
             </div>
             <div class="form-group">
                 <label class="" for="prevalence">Prevalence</label>
@@ -41,18 +41,18 @@
                 <label class="" for="meanincomeofparticipants">Income</label>
                 <select class="custom-select" id="meanincomeofparticipants">
                     <option value="all">All</option>
-                    <option value="low">Low</option>
-                    <option value="med">Medium</option>
-                    <option value="high">High</option>
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
                 </select>
             </div>
             <div class="form-group">
                 <label class="" for="educationlevelofparticipants">Education</label>
                 <select class="custom-select" id="educationlevelofparticipants">
                     <option value="all">All</option>
-                    <option value="low">Low</option>
-                    <option value="med">Medium</option>
-                    <option value="high">High</option>
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
                 </select>
             </div>
             {% if template == "list" %}
