--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -82,6 +82,8 @@
     let studytype = "{{ studytype }}";
     let keyword = "{{ keyword }}";
     let timeline_type = "{{ timeline_type }}";
+    let income = "{{ meanincome }}";
+    let education = "{{ education }}";
     const world_atlas = "{% static 'autism_prevalence_map/vendor/data/110m.json' %}";
 </script>  
 <script src="{% static 'autism_prevalence_map/js/joint.js' %}"></script>
