--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
@@ -55,7 +55,7 @@ aside.sidebar {
 }
 
 .container#content-container .content .bio p {
-    width: 465px;
+    max-width: 465px;
     font-weight: 400;
     font-family: "azo-sans-web", sans-serif;
     font-size: 16px;
@@ -66,4 +66,78 @@ aside.sidebar {
     letter-spacing: 0.5px;
     font-weight: bold;
     text-transform: uppercase;
+}
+
+.newsletter {
+    background-color: #ffc10d;
+    background-image: linear-gradient(to right, #FFC10D, #F89C2C);
+    padding: 15px 10px 18px 13px;
+    max-width: 465px;
+    margin-bottom: 12em;
+}
+    .about#content-container .row .content:first-child .newsletter h2 {
+        color: white;
+        margin-top: 0;
+    }
+
+    .newsletter .mc-field-group {
+        position: relative;
+    }
+
+    .newsletter input[type="email"] {
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 44px;
+        margin-bottom: 12px;
+        vertical-align: top;
+        background: none;
+        border: 2px solid #FFF;
+        margin-right: -4px;
+        text-transform: uppercase;
+        padding: 0 12px !important;
+        color: #fff;
+        font-size: 13px;
+        letter-spacing: 0.5px;
+        -webkit-appearance: none;
+    }
+
+    .newsletter #mc-embedded-subscribe {
+        position: absolute;
+        top: 0;
+        right: 0;
+        border: 0px solid
+        #000;
+        display: block;
+        width: 44px;
+        height: 44px;
+        text-indent: -9999px;
+        cursor: pointer;
+        transition: 0.15s opacity 0s ease-out;
+        -webkit-transition: 0.15s opacity 0s ease-out;
+        -moz-transition: 0.15s opacity 0s ease-out;
+        -ms-transition: 0.15s opacity 0s ease-out;
+        -o-transition: 0.15s opacity 0s ease-out;
+        background: #fff url(https://www.spectrumnews.org/wp-content/themes/sfari-spectrum/img/icons/arrow-button-transparent.png) center no-repeat;
+            background-size: auto;
+        background-size: contain;
+    }
+
+    .newsletter #mce-success-response,
+    .newsletter #mce-error-response {
+        color: white;
+    }
+
+    .newsletter #mce-success-response a,
+    .newsletter #mce-error-response a {
+        color: white;
+        text-decoration: underline;
+    }
+
+
+@media (max-width: 767px) {
+    #content-container .content.col-7 {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
 }
