SPEC-325: Changing progress bar to include updates properly 	modified:   autism_prevalence_map/static/autism_prevalence_map/css/about.css 	modified:   autism_prevalence_map/static/autism_prevalence_map/js/about.js

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
@@ -73,7 +73,6 @@ aside.sidebar {
     background-image: linear-gradient(to right, #FFC10D, #F89C2C);
     padding: 15px 10px 18px 13px;
     max-width: 465px;
-    margin-bottom: 12em;
 }
     .about#content-container .row .content:first-child .newsletter h2 {
         color: white;
@@ -134,6 +133,9 @@ aside.sidebar {
         text-decoration: underline;
     }
 
+#end-row {
+    margin-bottom: 12em;
+}
 
 @media (max-width: 767px) {
     #content-container .content.col-7 {
