SPEC-325: Moving the newsletter signup to the top 	modified:   autism_prevalence_map/static/autism_prevalence_map/css/about.css 	modified:   autism_prevalence_map/templates/autism_prevalence_map/about.html

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/about.css
@@ -72,7 +72,7 @@ aside.sidebar {
     background-color: #ffc10d;
     background-image: linear-gradient(to right, #FFC10D, #F89C2C);
     padding: 15px 10px 18px 13px;
-    max-width: 465px;
+    margin-bottom: 2em;
 }
     .about#content-container .row .content:first-child .newsletter h2 {
         color: white;
