SPEC-324: Adding "cite the map" subnav item for this page 	modified:   spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -23,8 +23,9 @@
                 <ul class="chapter-navigation">
                     <li class="chapter-link"><a href="#1" class="active">About the map<div class="progress background" style="height: 62.9278%; width: 5px;"></div></a></li>
                     <li class="chapter-link"><a href="#2">How to use the map<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
-                    <li class="chapter-link"><a href="#3">More information<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
-                    <li class="chapter-link"><a href="#4">The team<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
+                    <li class="chapter-link"><a href="#3">How to cite the map<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
+                    <li class="chapter-link"><a href="#4">More information<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
+                    <li class="chapter-link"><a href="#5">The team<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
                 </ul>
             </aside>
         </div>
