--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -83,8 +83,18 @@
     ga('require', optimizeContainer);
     ga('send', 'pageview');
 
+
+    window.smartlook||(function(d) {
+        var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
+        var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+        c.charset='utf-8';c.src='https://rec.smartlook.com/recorder.js';h.appendChild(c);
+        })(document);
+        smartlook('init', '4628f793b5a08af66717e9398e6a50ca3b8b9d0a');
+
+
+
     </script>
-    <!-- [/Google Analytics and Optimize] -->
+    <!-- [/Google Analytics, Smartlook, and Optimize] -->
 
 </head>
 
