delete the table rows before pulling data from google sheet

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -89,6 +89,8 @@
             <p class="card-text" id="card-age"></p>
             <h6 class="card-subtitle font-weight-bold">Diagnostic criteria</h6>
             <p class="card-text" id="card-diagnosticcriteria"></p>
+            <h6 class="card-subtitle font-weight-bold">Diagnostic tools</h6>
+            <p class="card-text" id="card-diagnostictools"></p>
             <h6 class="card-subtitle font-weight-bold">Percent w/ average IQ</h6>
             <p class="card-text" id="card-percentwaverageiq"></p>
             <h6 class="card-subtitle font-weight-bold">Sex ratio (M:F)</h6>
