--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@spectrum">
+
     <meta name="twitter:creator" content="@spectrum">
     <meta name="twitter:title" content="Global Autism Prevalence Map | Spectrum">
     <meta name="twitter:description" content="The map features a collection of studies on autism prevalence around the world. It highlights places where information is available — and places where information is missing.">
@@ -94,7 +95,20 @@
 
 
     </script>
+
     <!-- [/Google Analytics, Smartlook, and Optimize] -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CRWYJ4M41R"></script>
+    <script>
+    
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CRWYJ4M41R');
+   
+   </script>
 
 </head>
 
