specwww-724: added a class to chapter navigation for more specificity

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -20,7 +20,7 @@
     <div class="sidebar-container container">
         <div class="row">
             <aside class="col-3 sidebar">
-                <ul class="chapter-navigation">
+                <ul class="chapter-navigation prevalence-map-about">
                     <li class="chapter-link"><a href="#1" class="active">About the map<div class="progress background" style="height: 62.9278%; width: 5px;"></div></a></li>
                     <li class="chapter-link"><a href="#2">How to use the map<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
                     <li class="chapter-link"><a href="#3">How to cite the map<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
