specwww-724: added prevalence map about id to the html code

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -15,11 +15,11 @@
 {% block body_block %}
 <!-- Main Container
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<section class="hero-nav container orange page-template-page-about">
-    <div class="sidebar-container container">
+<section class="hero-nav container orange" id="prevalence-map-about">
+    <div class="sidebar-container container " >
         <div class="row">
             <aside class="col-3 sidebar">
-                <ul class="chapter-navigation prevalence-map-about">
+                <ul class="chapter-navigation ">
                     <li class="chapter-link"><a href="#1" class="active">About the map<div class="progress background" style="height: 62.9278%; width: 5px;"></div></a></li>
                     <li class="chapter-link"><a href="#2">How to use the map<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
                     <li class="chapter-link"><a href="#3">How to cite the map<div class="progress background" style="height: 0%; width: 5px;"></div></a></li>
