specwww-724-r: removed subscription field and link include adjustment

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -7,7 +7,7 @@
 {% block css_block %}
 <!-- Custom map CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel='stylesheet' id='spectrum-style-css'  href={{css_base|add:'/wp-content/themes/sfari-spectrum/css/spectrum.min.css?ver=2.0.2'}} type='text/css' media='all' />
+<link rel="stylesheet" id="spectrum-style-css"  href="{{css_base}}/wp-content/themes/sfari-spectrum/css/spectrum.min.css?ver=2.0.2" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/about.css' %}">
 {% endblock %}
 
@@ -33,25 +33,6 @@
 <div class="container-fluid about container orange" id="content-container">
     <main class="row">
         <div class="col col-7 push-3 content" id="about_spectrum">
-            <div class="newsletter">
-                <h2>Sign up for updates about <em>Spectrum</em>'s autism prevalence map</h2>
-                <div id="mc_embed_signup">
-                    <form action="https://spectrumnews.us11.list-manage.com/subscribe/post?u=725d9bd9f4c8ea826904b1f95&amp;id=529db1161f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                        <div id="mc_embed_signup_scroll">
-                            <div class="mc-field-group">
-                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="ENTER EMAIL" required>
-                                <div style="position: absolute; left: -5000px;"><input type="text" name="b_84c0eeb5f5b138c2b70075cea_37fdb174e3" tabindex="-1" value=""></div>
-                                <input type="hidden" value="4" name="group[13][4]" id="mce-group[13]-13-2">
-                                <input type="submit" value="" name="SUBMIT" id="mc-embedded-subscribe" class="submit-button">
-                            </div>
-                            <div id="mce-responses" class="clear">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
             <div id="wp-content">
                 <div id="end-row"></div>
             </div>
