--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -42,19 +42,16 @@
 
     <!-- [Google Analytics/Optimize] -->
     <style>.async-hide { opacity: 0 !important} </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BKVX7LHVRB"></script>
     <script>
 
-    var stagingTrackingProperty = 'UA-8526335-27';
     var stagingOptimizeContainer = 'GTM-T96ZVZZ';
 
-    var prodTrackingProperty = 'UA-8526335-18';
     var prodOptimizeContainer = 'GTM-K4R62V8';
 
-    var trackingProperty = prodTrackingProperty;
     var optimizeContainer = prodOptimizeContainer;
 
     if (window.location.hostname.indexOf('staging') != -1){
-        trackingProperty = stagingTrackingProperty;
         optimizeContainer = stagingOptimizeContainer;
 
         //page hiding snippet for staging
@@ -65,6 +62,12 @@
         {'GTM-T96ZVZZ':true});
 
     }else{
+        
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-BKVX7LHVRB');
+
 
         //page hiding snippet for production
         (function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
@@ -75,14 +78,6 @@
 
     }
 
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', trackingProperty, 'auto');
-    ga('require', optimizeContainer);
-    ga('send', 'pageview');
-
 
     window.smartlook||(function(d) {
         var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
@@ -91,11 +86,9 @@
         })(document);
         smartlook('init', '4628f793b5a08af66717e9398e6a50ca3b8b9d0a');
 
-
-
     </script>
-    <!-- [/Google Analytics, Smartlook, and Optimize] -->
 
+    <!-- [/Google Analytics, Smartlook, and Optimize] -->
 </head>
 
 <body>
