--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/admin/change_list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/admin/change_list.html
@@ -3,7 +3,7 @@
 {% block object-tools-items %}
     {% if has_add_permission %}
     <li>
-        <a href="bulk-import/">Bulk Importer</a>
+        <a href="bulk-import/">Bulk Import</a>
     </li>
     <li>
         {% url cl.opts|admin_urlname:'add' as add_url %}
