specwww-795: put last updated on place holder text into template

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -50,6 +50,9 @@
                                 Year(s) studied
                             {% endif %}
                         </span>
+                        <div>
+                            Data last updated on {{last_updated_on}}
+                        </div>
                     </div>
                     <div id="timeline" class='ui-brush timeline col-xl-9'></div>
                 </div>
