--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -50,9 +50,11 @@
                                 Year(s) studied
                             {% endif %}
                         </span>
-                        <div>
-                            Data last updated on {{last_updated_on}}
-                        </div>
+                        {% if last_updated_on !== "" %}
+                            <div>
+                                Data last updated on {{last_updated_on}}
+                            </div>
+                        {% endif %}
                     </div>
                     <div id="timeline" class='ui-brush timeline col-xl-9'></div>
                 </div>
