--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/map.html
@@ -50,7 +50,7 @@
                                 Year(s) studied
                             {% endif %}
                         </span>
-                        {% if last_updated_on !== "" %}
+                        {% if last_updated_on != "" %}
                             <div>
                                 Data last updated on {{last_updated_on}}
                             </div>
