specwww-795: italicized note

--- a/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
+++ b/spectrum/autism_prevalence_map/static/autism_prevalence_map/css/map.css
@@ -131,6 +131,11 @@
     .timeline-toggle {
         display: block;
     }
+
+    .timeline-toggle div {
+       font-style: italic;
+    }
+
 }
 
 /* Switch CSS */
