ttwww-336: initial work for upgrade django

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/list.html
@@ -1,6 +1,6 @@
 {% extends 'autism_prevalence_map/base.html' %} 
 
-{% load staticfiles %} 
+{% load static %} 
 
 {% block title %}Spectrum | Global Autism Prevalence Map{% endblock %} 
 
