TTWWW-354: change the meta info from spectrum to the transmitter

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/about.html
@@ -7,7 +7,7 @@
 {% block css_block %}
 <!-- Custom map CSS
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-<link rel="stylesheet" id="spectrum-style-css"  href="{{css_base}}/wp-content/themes/sfari-spectrum/css/spectrum.min.css?ver=2.0.2" type="text/css" media="all" />
+<link rel="stylesheet" id="spectrum-style-css"  href="https://www.spectrumnews.org/wp-content/themes/sfari-spectrum/css/spectrum.min.css?ver=2.0.2" type="text/css" media="all" />
 <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/about.css' %}">
 {% endblock %}
 
