TTWWW-466: Clearing out some old styling items, switching from staticfiles to static in preparation for Django upgrade 	deleted:    autism_prevalence_map/static/autism_prevalence_map/css/about.css 	deleted:    autism_prevalence_map/static/autism_prevalence_map/css/list.css 	deleted:    autism_prevalence_map/static/autism_prevalence_map/css/map.css 	deleted:    autism_prevalence_map/static/autism_prevalence_map/css/style.css 	modified:   autism_prevalence_map/templates/autism_prevalence_map/about.html 	modified:   autism_prevalence_map/templates/autism_prevalence_map/base.html 	modified:   autism_prevalence_map/templates/autism_prevalence_map/list.html 	modified:   autism_prevalence_map/templates/autism_prevalence_map/map.html

--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/base.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,10 +24,6 @@
 
     <!-- CSS libraries
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-    <!-- <link rel="stylesheet" href="https://use.typekit.net/hjy6pmo.css"> -->
-    <script src="https://use.typekit.net/gnz4dab.js"></script>
-    <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/vendor/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <!-- Custom site-wide CSS
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <link rel="stylesheet" type="text/css" href="{% static 'autism_prevalence_map/css/style.css' %}">
